--- a/platform/exacto/templates/afina/dev_mline/mods.conf
+++ b/platform/exacto/templates/afina/dev_mline/mods.conf
@@ -115,18 +115,29 @@ configuration conf {
 	include embox.fs.syslib.perm_stub
 	include embox.driver.block_dev
 
-	include exacto.gpio.afina.basis.config
 
 	//@Runlevel(2) include exacto.gpio.led
 	//@Runlevel(2) include exacto.gpio.mline_spi_main
 
+//	@Runlevel(3) include exacto.spi.mline_main
+//	@Runlevel(3) include exacto.afina.tim.tim3
+//	include exacto.commander.buffer(buffersz = 2048, extbuffersz = 16384)
+//	include exacto.commander.data_storage_options(exactolinkbuffersz = 512, use_extended_fun=false, use_printk=false)
+//	include exacto.commander.data_storage_afina
+
+//	include exacto.cmds.mliner.spi_main
+//	include exacto.hardtools.basic_afina
+
+	include exacto.gpio.afina.basis.config
+	include exacto.hardtools.basic_afina
+
 	@Runlevel(3) include exacto.spi.mline_main
 	@Runlevel(3) include exacto.afina.tim.tim3
 	include exacto.commander.buffer(buffersz = 2048, extbuffersz = 16384)
-	include exacto.commander.data_storage_options(exactolinkbuffersz = 512, use_extended_fun=false, use_printk=false)
+	include exacto.commander.data_storage_options(exactolinkbuffersz = 512,use_extended_fun=false)
 	include exacto.commander.data_storage_afina
 
 	include exacto.cmds.mliner.spi_main
-	include exacto.hardtools.basic_afina
+	include exacto.cmds.mliner.test_cmd_afina
 	
 }
