--- a/platform/exacto/templates/afina/fin_tests/mods.conf
+++ b/platform/exacto/templates/afina/fin_tests/mods.conf
@@ -117,15 +117,24 @@ configuration conf {
 
 
 	include exacto.gpio.afina.small.config
+	include exacto.hardtools.basic_afina
 
 	@Runlevel(3) include exacto.spi.mline_main
 	@Runlevel(3) include exacto.afina.tim.tim3
 	include exacto.commander.buffer(buffersz = 2048, extbuffersz = 16384)
-//	include exacto.commander.data_storage(exactolinkbuffersz = 512,use_extended_fun=true, use_printk=true)
 	include exacto.commander.data_storage_options(exactolinkbuffersz = 512,use_extended_fun=false)
 	include exacto.commander.data_storage_afina
 
-	include exacto.cmds.mliner.spi_main
-	include exacto.hardtools.basic_afina
-	
+
+//===============================================
+
+	@Runlevel(3) include exacto.mliner.main_mod_afina
+	include exacto.cmds.mliner.test_read_afina
+	include exacto.cmds.mliner.test_cmd_afina
+	include exacto.cmds.mliner.start_mliner_afina
+	include exacto.cmds.mliner.stop_mliner_afina
+
+	@Runlevel(3)	include exacto.cmds.tests.print.smpl_mod
+	include exacto.cmds.tests.print.start
+	include exacto.cmds.tests.print.check
 }
