--- a/platform/exacto/templates/afina/dev_mline/mods.conf
+++ b/platform/exacto/templates/afina/dev_mline/mods.conf
@@ -115,36 +115,23 @@ configuration conf {
 	include embox.fs.syslib.perm_stub
 	include embox.driver.block_dev
 
-
-	//@Runlevel(2) include exacto.gpio.led
-	//@Runlevel(2) include exacto.gpio.mline_spi_main
-
-//	@Runlevel(3) include exacto.spi.mline_main
-//	@Runlevel(3) include exacto.afina.tim.tim3
-//	include exacto.commander.buffer(buffersz = 2048, extbuffersz = 16384)
-//	include exacto.commander.data_storage_options(exactolinkbuffersz = 512, use_extended_fun=false, use_printk=false)
-//	include exacto.commander.data_storage_afina
-
-//	include exacto.cmds.mliner.spi_main
-//	include exacto.hardtools.basic_afina
-
 	include exacto.gpio.afina.basis.config
 	include exacto.hardtools.basic_afina
 
-	@Runlevel(3) include exacto.spi.mline_main
-	@Runlevel(3) include exacto.afina.tim.tim3
+	@Runlevel(3)	include exacto.spi.mline_main
+	@Runlevel(3)	include exacto.afina.tim.tim3
+//	@Runlevel(3)	include exacto.mliner.main_mod_afina
+//	@Runlevel(3)	include exacto.cmds.tests.print.smpl_mod
+
 	include exacto.commander.buffer(buffersz = 2048, extbuffersz = 16384)
 	include exacto.commander.data_storage_options(exactolinkbuffersz = 512,use_extended_fun=false)
 	include exacto.commander.data_storage_afina
 
-	@Runlevel(3) include exacto.mliner.main_mod_afina
-	//include exacto.cmds.mliner.spi_main
-	include exacto.cmds.mliner.test_read_afina
-	include exacto.cmds.mliner.test_cmd_afina
-	include exacto.cmds.mliner.start_mliner_afina
-	include exacto.cmds.mliner.stop_mliner_afina
-
-	@Runlevel(3)	include exacto.cmds.tests.print.smpl_mod
+//	include exacto.cmds.mliner.test_read_afina
+//	include exacto.cmds.mliner.test_cmd_afina
+//	include exacto.cmds.mliner.start_mliner_afina
+//	include exacto.cmds.mliner.stop_mliner_afina
 	include exacto.cmds.tests.print.start
 	include exacto.cmds.tests.print.check
+	include exacto.cmds.tests.mliner.main_sender
 }
